add and introduction part to the notebook

--- a/python/notebook/exploration.ipynb
+++ b/python/notebook/exploration.ipynb
@@ -1,46 +1,17 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from pyspark import SparkContext\n",
-    "from pyspark.sql import SQLContext\n",
-    "from pyspark.sql import SparkSession\n",
-    "import pyspark.ml.feature as proc\n",
-    "import pyspark.sql.functions as F"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sc = SparkContext()\n",
-    "spark = SparkSession(sc)"
+    "<h1><center>Recommendation system in python</center></h1>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Roadmap__\n",
-    "\n",
-    "1. Just use Chicago restaurant and recommend only Chigago restaurant even if entry point of user come from another city\n",
-    "2. Extend recommendations to restaurants from other cities than Chicago.\n",
-    "\n",
-    "TODO:\n",
-    "- Apply tf-idf on restaurant description and calculate similarity restaurant for users (cf [medium](https://heartbeat.fritz.ai/recommender-systems-with-python-part-i-content-based-filtering-5df4940bd831))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Introduction"
+    "### Introduction"
    ]
   },
   {
@@ -57,19 +28,19 @@
     "\n",
     "__Dataset Information__\n",
     "\n",
-    "Add a macro description of the dataset\n",
+    "The dataset contained two subdirectories. One contains the data about users' sessions and the other the restaurants' informations. Each subfolder contains a readme file with more details about the dataset.\n",
     "\n",
-    "1. Users Session\n",
+    "1. Users' Sessions\n",
     "\n",
     "This data records interactions with Entree Chicago restaurant recommendation system (originally [Web Link](http://infolab.cs.uchicago.edu/entree)) from September, 1996 to April, 1999. The data is organized into files roughly spanning a quarter year -- with Q3 1996 and Q2 1999 each only containing one month.\n",
     "\n",
     "Each line in a session file represents a session of user interaction with the system. The (tab-separated) fields are as follows:\n",
     "\n",
-    "- date: \n",
-    "- ip:\n",
-    "- entry point:\n",
-    "- rates:\n",
-    "- end point:\n",
+    "- date: Date of the connection\n",
+    "- ip: ip adress of the user\n",
+    "- entry point: Users can use a restaurant from any city as a entry point, but they always get recommendations for Chicago restaurants. Entry points have the form nnnX, where nnn is a numeric restaurant ID and X is a character A-H that encodes the city.\n",
+    "- rates: These are all Chicago restaurants. These entries have the form nnnX, where nnn is a numeric restaurant ID and X is a character L-T that encodes the navigation operation (see readme for more details).\n",
+    "- end point: Just the numeric id for the (Chicago) restaurant that the user saw last\n",
     "\n",
     "Bellow an example of the data\n",
     "\n",
@@ -80,15 +51,94 @@
     "\n",
     "2. Restaurant information\n",
     "\n",
-    "These are all Chicago restaurants.\n",
-    "These entries have the form nnnX, where nnn is a numeric restaurant ID and X is a character L-T that encodes the navigation operation."
+    "In addition to the user's interactions, there is also data linking the restaurant ID with its name and features such as \"fabulous wine lists\", \"good for younger kids\", and \"Ethopian\" cuisine. This data is stored by city (e.g. Atlanta, Boston, etc.) and is in the following format:\n",
+    "\n",
+    "- id: ID of the restaurant\n",
+    "- name: name of the restaurant\n",
+    "- description: features about the restaurant\n",
+    "\n",
+    "Bellow an example of the data\n",
+    "\n",
+    "|        id        |           name       |             description                             |\n",
+    "-------------------| -------------------- | --------------------------------------------------- |\n",
+    "0000436            | La Fontanella        | 214 249 229 125 075 205 052 165                     |\n",
+    "0000437            | Retro Bistro         | 137 174 200 196 193 191 192 025 092 076 206 053 166 |"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark import SparkContext\n",
+    "from pyspark.sql import SQLContext\n",
+    "from pyspark.sql import SparkSession\n",
+    "import pyspark.ml.feature as proc\n",
+    "import pyspark.sql.functions as F\n",
+    "from pathlib import Path\n",
+    "\n",
+    "project_dir = Path.cwd().parents[1]\n",
+    "data_dir = project_dir / 'data'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sc = SparkContext()\n",
+    "spark = SparkSession(sc)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Restaurant information"
+    "### Get the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2019-11-02 17:46:45--  http://archive.ics.uci.edu/ml/machine-learning-databases/entree-mld/entree_data.tar.gz\n",
+      "Resolving archive.ics.uci.edu (archive.ics.uci.edu)... 128.195.10.252\n",
+      "Connecting to archive.ics.uci.edu (archive.ics.uci.edu)|128.195.10.252|:80... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 1074349 (1.0M) [application/x-httpd-php]\n",
+      "Saving to: ‘entree_data.tar.gz’\n",
+      "\n",
+      "entree_data.tar.gz  100%[===================>]   1.02M   569KB/s    in 1.8s    \n",
+      "\n",
+      "2019-11-02 17:46:47 (569 KB/s) - ‘entree_data.tar.gz’ saved [1074349/1074349]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "url = 'http://archive.ics.uci.edu/ml/machine-learning-databases/entree-mld/entree_data.tar.gz'\n",
+    "!cd $data_dir && wget $url"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualiazation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Apply TF-IDF"
    ]
   },
   {
@@ -98,7 +148,7 @@
    "outputs": [],
    "source": [
     "# Get mapping for tokens to words\n",
-    "tokens_to_words = dict(sc.textFile('data/entree/data/features.txt')\\\n",
+    "tokens_to_words = dict(sc.textFile(data_dir / 'entree/data/features.txt')\\\n",
     "                    .map(lambda line: line.split('\\t'))\n",
     "                    .collect())"
    ]
@@ -115,7 +165,7 @@
     "                 .map(lambda column: (column[0], column[1], ' '.join(column[2].split(' ')[:-1]), column[2].split(' ')[-1]))\n",
     "    return raw_data.toDF(('id', 'name', 'description', 'price'))\n",
     "    \n",
-    "df = transform_restaurants_data(\"data/entree/data/chicago.txt\")"
+    "df = transform_restaurants_data(data_dir / \"entree/data/chicago.txt\")"
    ]
   },
   {
@@ -368,7 +418,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Users' informations__"
+    "### User's profile"
    ]
   },
   {
@@ -391,7 +441,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_session = transform_session_data('data/entree/session/session.1996-Q4')"
+    "df_session = transform_session_data(data_dir / 'entree/session/session.1996-Q4')"
    ]
   },
   {
