first version recommendation system with spark

--- a/python/notebook/exploration.ipynb
+++ b/python/notebook/exploration.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Introduction"
+    "## Introduction"
    ]
   },
   {
@@ -30,7 +30,7 @@
     "\n",
     "The dataset contained two subdirectories. One contains the data about users' sessions and the other the restaurants' informations. Each subfolder contains a readme file with more details about the dataset.\n",
     "\n",
-    "1. Users' Sessions\n",
+    "__1.__ Users' Sessions\n",
     "\n",
     "This data records interactions with Entree Chicago restaurant recommendation system (originally [Web Link](http://infolab.cs.uchicago.edu/entree)) from September, 1996 to April, 1999. The data is organized into files roughly spanning a quarter year -- with Q3 1996 and Q2 1999 each only containing one month.\n",
     "\n",
@@ -49,7 +49,7 @@
     "01/Oct/1996:10:08:41 | keeper.tribune.com |      0      | 369N    369P |    -1\n",
     "01/Oct/1996:11:34:23 | 128.103.79.152     |      0      | 387L    245L |    245\n",
     "\n",
-    "2. Restaurant information\n",
+    "__2.__ Restaurant information\n",
     "\n",
     "In addition to the user's interactions, there is also data linking the restaurant ID with its name and features such as \"fabulous wine lists\", \"good for younger kids\", and \"Ethopian\" cuisine. This data is stored by city (e.g. Atlanta, Boston, etc.) and is in the following format:\n",
     "\n",
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,9 @@
     "from pyspark.sql import SparkSession\n",
     "import pyspark.ml.feature as proc\n",
     "import pyspark.sql.functions as F\n",
+    "from pyspark.mllib.linalg.distributed import IndexedRow, IndexedRowMatrix\n",
     "from pathlib import Path\n",
+    "import numpy as np\n",
     "\n",
     "project_dir = Path.cwd().parents[1]\n",
     "data_dir = project_dir / 'data'"
@@ -84,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,66 +98,66 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Get the data"
+    "## Get the data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2019-11-02 17:46:45--  http://archive.ics.uci.edu/ml/machine-learning-databases/entree-mld/entree_data.tar.gz\n",
+      "--2019-12-01 12:47:10--  http://archive.ics.uci.edu/ml/machine-learning-databases/entree-mld/entree_data.tar.gz\n",
       "Resolving archive.ics.uci.edu (archive.ics.uci.edu)... 128.195.10.252\n",
       "Connecting to archive.ics.uci.edu (archive.ics.uci.edu)|128.195.10.252|:80... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 1074349 (1.0M) [application/x-httpd-php]\n",
       "Saving to: ‘entree_data.tar.gz’\n",
       "\n",
-      "entree_data.tar.gz  100%[===================>]   1.02M   569KB/s    in 1.8s    \n",
+      "entree_data.tar.gz  100%[===================>]   1.02M   527KB/s    in 2.0s    \n",
       "\n",
-      "2019-11-02 17:46:47 (569 KB/s) - ‘entree_data.tar.gz’ saved [1074349/1074349]\n",
+      "2019-12-01 12:47:13 (527 KB/s) - ‘entree_data.tar.gz’ saved [1074349/1074349]\n",
       "\n"
      ]
     }
    ],
    "source": [
     "url = 'http://archive.ics.uci.edu/ml/machine-learning-databases/entree-mld/entree_data.tar.gz'\n",
-    "!cd $data_dir && wget $url"
+    "!cd $data_dir && wget $url && tar -xzf entree_data.tar.gz"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Visualiazation"
+    "## Content based filtering"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Apply TF-IDF"
+    "We are going to use content-based filtering to provided the recommendation for the user. By using the restaurant's features provided in the dataset, we can compute the tf-idf."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Get mapping for tokens to words\n",
-    "tokens_to_words = dict(sc.textFile(data_dir / 'entree/data/features.txt')\\\n",
+    "tokens_to_words = dict(sc.textFile(str(data_dir / 'entree/data/features.txt'))\\\n",
     "                    .map(lambda line: line.split('\\t'))\n",
     "                    .collect())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,12 +167,12 @@
     "                 .map(lambda column: (column[0], column[1], ' '.join(column[2].split(' ')[:-1]), column[2].split(' ')[-1]))\n",
     "    return raw_data.toDF(('id', 'name', 'description', 'price'))\n",
     "    \n",
-    "df = transform_restaurants_data(data_dir / \"entree/data/chicago.txt\")"
+    "df = transform_restaurants_data(str(data_dir / \"entree/data/chicago.txt\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -218,8 +220,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The embedings given for the restaurant data are not usable by spark. So, we transform the features into sentence and aply tf-if with spark"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,65 +241,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "count_vectorizer = proc.CountVectorizer(inputCol='tokens', outputCol='tf')\\\n",
-    "                       .fit(tokens_df)\n",
-    "tf_df = count_vectorizer.transform(tokens_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+--------------------+\n",
-      "|                  tf|\n",
-      "+--------------------+\n",
-      "|(209,[0,1,2,3,4,7...|\n",
-      "|(209,[0,2,3,4,5,6...|\n",
-      "|(209,[0,2,3,4,5,6...|\n",
-      "|(209,[0,2,3,4,5,6...|\n",
-      "|(209,[0,2,3,4,5,6...|\n",
-      "|(209,[1,2,3,4,5,6...|\n",
-      "|(209,[1,2,3,4,7,1...|\n",
-      "|(209,[0,1,2,3,4,5...|\n",
-      "|(209,[0,1,2,3,4,1...|\n",
-      "|(209,[0,1,2,3,4,8...|\n",
-      "|(209,[0,1,2,3,4,5...|\n",
-      "|(209,[0,2,3,4,5,6...|\n",
-      "|(209,[0,1,2,3,4,5...|\n",
-      "|(209,[0,2,3,4,5,6...|\n",
-      "|(209,[0,2,3,4,5,6...|\n",
-      "|(209,[0,1,2,3,4,7...|\n",
-      "|(209,[0,2,3,4,5,6...|\n",
-      "|(209,[0,1,2,3,4,5...|\n",
-      "|(209,[0,1,2,3,4,5...|\n",
-      "|(209,[0,2,3,4,5,6...|\n",
-      "+--------------------+\n",
-      "only showing top 20 rows\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "tf_df.select('tf').show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 114,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "idfModel = proc.IDF(inputCol=\"tf\", outputCol=\"tf-idf\").fit(tf_df)\n",
-    "tf_idf_df = idfModel.transform(tf_df)"
+    "                       .fit(tokens_df)"
    ]
   },
   {
@@ -301,49 +257,60 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 116,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from pyspark.ml.feature import Normalizer\n",
-    "normalizer = Normalizer(inputCol=\"tf-idf\", outputCol=\"norm\")\n",
-    "data = normalizer.transform(tf_idf_df)"
+    "A common distance metric is cosine similarity. The metric can be thought of geometrically if one treats a given item’s row of the ratings matrix as a vector. For content-based filtering, two item similarity is measured as the cosine of the angle between the two items’ vectors. The class below compute a matrix cosinus similarity for each restaurant in our dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyspark.mllib.linalg.distributed import IndexedRow, IndexedRowMatrix\n",
-    "mat = IndexedRowMatrix(\n",
-    "    data.select(\"id\", \"norm\")\\\n",
-    "        .rdd.map(lambda row: IndexedRow(row.id, row.norm.toArray()))).toBlockMatrix()\n",
-    "dot = mat.multiply(mat.transpose())\n",
-    "cosine_similarity = dot.toLocalMatrix().toArray()"
+    "class CosinusSimilarityClassifier:\n",
+    "    \"\"\"Class to compute matrix cosinus similarity based on a column description\n",
+    "    from the input dataframe\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        self.normalizer = None\n",
+    "        self.cosine_similarity = None\n",
+    "        self.count_vectorizer = None\n",
+    "        self.idfModel = None\n",
+    "    \n",
+    "    def _fit_tf_idf(self, df, tokens_col, output_col):\n",
+    "        self.count_vectorizer = proc.CountVectorizer(inputCol=tokens_col, outputCol='tf').fit(df)\n",
+    "        tf_df = self.count_vectorizer.transform(tokens_df)\n",
+    "        \n",
+    "        self.idfModel = proc.IDF(inputCol=\"tf\", outputCol=\"idf\").fit(tf_df)\n",
+    "        idf_df = self.idfModel.transform(tf_df)\n",
+    "        \n",
+    "        self.normalizer = proc.Normalizer(inputCol='idf', outputCol=output_col)\n",
+    "        return self.normalizer.transform(idf_df)\n",
+    "    \n",
+    "    def _fit_matrix_similarity(self, df, id_col, embedding_col):\n",
+    "        mat = IndexedRowMatrix(df.select(id_col, embedding_col)\\\n",
+    "                                 .rdd.map(lambda row: IndexedRow(row.id, row.norm.toArray())))\\\n",
+    "                                 .toBlockMatrix()\n",
+    "        dot = mat.multiply(mat.transpose())\n",
+    "        self.cosine_similarity = dot.toLocalMatrix().toArray()\n",
+    "        return self\n",
+    "    \n",
+    "    def fit(self, df, tokens_col, id_col):\n",
+    "        df = self._fit_tf_idf(df, tokens_col=tokens_col, output_col='norm')\n",
+    "        self._fit_matrix_similarity(df, id_col=id_col, embedding_col='norm')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([  9, 614, 210, 509, 352, 593, 647, 450, 130, 167])"
-      ]
-     },
-     "execution_count": 124,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Get an example of similarity -> get 10 most similar restaurant\n",
-    "cosine_similarity[9].argsort()[::-1][:10]"
+    "cos_sim_classifier = CosinusSimilarityClassifier()\n",
+    "cos_sim_classifier.fit(df=tokens_df, tokens_col='tokens', id_col='id')"
    ]
   },
   {
@@ -354,76 +321,55 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 131,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Row(date='01/Oct/1996:10:08:41 ', ip='keeper.tribune.com', rates='369N 369P')]"
-      ]
-     },
-     "execution_count": 131,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "df_session.select('date', 'ip', 'rates').take(1)"
+    "For a user which like restaurant as the first one of the dataset (Moti Mahal) which serve indian food, we can test the cosinus similarity method"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([369, 380, 541, 216, 106,  68, 590, 284, 482, 637])"
-      ]
-     },
-     "execution_count": 132,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moti Mahal 0.9999999999999999\n",
+      "Standard India 0.9489745950547768\n",
+      "Udupi Palace 0.8097034711916234\n",
+      "Natraj 0.8073763310007285\n",
+      "Shree 0.7855653336442743\n",
+      "Gandhi Indian 0.6909826463283292\n",
+      "Mei Shung 0.6519763691217288\n",
+      "Formosa 0.6495665383643229\n",
+      "Anna Maria Pasteria 0.6437300279238267\n",
+      "Pine Yard 0.6422507002813812\n"
+     ]
     }
    ],
    "source": [
-    "cosine_similarity[369].argsort()[::-1][:10]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 143,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Row(tokens=['Cab', 'Wheelchair', 'Access', 'Weekend', 'Brunch', 'Good', 'for', 'Younger', 'Kids', 'For', 'the', 'Young', 'and', 'Young', 'at', 'Heart', 'Relaxed', 'Senior', 'Scene', 'No', 'Reservations', 'Hip', 'Place', 'To', 'Be', 'Delivery', 'Available', 'Takeout', 'Available', 'Eclectic', 'Excellent', 'Food', 'Good', 'Service', 'Excellent', 'Decor']),\n",
-       " Row(tokens=['Cab', 'Wheelchair', 'Access', 'Weekend', 'Brunch', 'Parking/Valet', 'Good', 'for', 'Younger', 'Kids', 'For', 'the', 'Young', 'and', 'Young', 'at', 'Heart', 'No', 'Reservations', 'Italian', 'Pizza', 'Excellent', 'Food', 'Good', 'Service', 'Fair', 'Decor'])]"
-      ]
-     },
-     "execution_count": 143,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tokens_df.select('tokens').where('id = 369 or id = 380').collect()"
+    "# List the k histest similarities obtained for the first restaurant of the matrix\n",
+    "k = 10\n",
+    "similarities = np.sort(cos_sim_classifier.cosine_similarity[0])[::-1][:k]\n",
+    "restaurants = [df.select('name').where('id = {}'.format(restaurant)).collect()[0][0] \n",
+    "               for restaurant in cos_sim_classifier.cosine_similarity[0].argsort()[::-1][:k]]\n",
+    "\n",
+    "for i in range(10):\n",
+    "    print(restaurants[i], similarities[i])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### User's profile"
+    "## Collaborative filtering"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,16 +383,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_session = transform_session_data(data_dir / 'entree/session/session.1996-Q4')"
+    "df_session = transform_session_data(str(data_dir / 'entree/session/session.1996-Q4'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -487,8 +433,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Get taste of users__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The second file show us the ratings given by the users. each user that navigate on the website can rates on a particular restaurant by giving a letter. There is different type of evaluation depending on the letter (see readme of the data for more details). By extract each letter used by the user, it's possible to obtain some information about his tastes."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,17 +462,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df_session.rdd.map(lambda row: (*row, get_personalities(row.restaurants_rates, mapping=letters_to_personalities)))\\\n",
+    "df = df_session.rdd.map(lambda row: (*row, get_personalities(row.rates, mapping=letters_to_personalities)))\\\n",
     "              .toDF(('date', 'ip', 'entry_point', 'rates', 'end_point', 'personality'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -575,6 +535,13 @@
    ],
    "source": [
     "users_rates.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our categoricals features are not very usefull to apply collaborative filtering. We need more information about the users. However, it's possible to weight the prediction made with the cosinus similatiry by using the information about \"this restaurant is quiet or fun ?\". By doing that, we will able to give a better recommendation based on the restaurant description and the taste of the user"
    ]
   }
  ],
