add readme and modify title notebook

--- a/python/notebook/exploration.ipynb
+++ b/python/notebook/exploration.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1><center>Recommendation system in python</center></h1>"
+    "# Recommendation system in python"
    ]
   },
   {
